--- a/people/index.html
+++ b/people/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: January 3, 2024 --><html lang="en-us" >
+<!-- Last Published: January 4, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -272,8 +272,8 @@
 
 
 
-<link rel="alternate" hreflang="en-us" href="https://example.com/people/" />
-<link rel="canonical" href="https://example.com/people/" />
+<link rel="alternate" hreflang="en-us" href="https://mindinaction.github.io/people/" />
+<link rel="canonical" href="https://mindinaction.github.io/people/" />
 
 
 
@@ -304,11 +304,11 @@
 
 
 <meta property="twitter:card" content="summary" />
-<meta property="twitter:image" content="https://example.com/media/icon_hub4dcace8ce2798ac95f15b515349aeea_1784_512x512_fill_lanczos_center_3.png" />
+<meta property="twitter:image" content="https://mindinaction.github.io/media/icon_hub4dcace8ce2798ac95f15b515349aeea_1784_512x512_fill_lanczos_center_3.png" />
 <meta property="og:site_name" content="The Mind in Action Lab" />
-<meta property="og:url" content="https://example.com/people/" />
+<meta property="og:url" content="https://mindinaction.github.io/people/" />
 <meta property="og:title" content="People | The Mind in Action Lab" />
-<meta property="og:description" content="" /><meta property="og:image" content="https://example.com/media/icon_hub4dcace8ce2798ac95f15b515349aeea_1784_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="" /><meta property="og:image" content="https://mindinaction.github.io/media/icon_hub4dcace8ce2798ac95f15b515349aeea_1784_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
 
   
     <meta
@@ -726,7 +726,7 @@
 
     
       <div class="col-md-12">
-        <h2 class="mb-4">The Lab</h2>
+        <h2 class="mb-4">Who we are</h2>
       </div>
     
 
