add pdf to publication

--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -721,8 +721,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/files/Manuscript_OKR.JEPGEN.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
