--- a/publication/index.html
+++ b/publication/index.html
@@ -890,8 +890,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/files/Manuscript_OKR.JEPGEN.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
