--- a/publication/ohl.jepgen.2023/index.html
+++ b/publication/ohl.jepgen.2023/index.html
@@ -764,8 +764,14 @@
 
 
   
+    
+  
 
 
+
+<a class="btn btn-outline-primary btn-page-header" href="/files/Manuscript_OKR.JEPGEN.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
