--- a/publication/rolfs.2024/index.html
+++ b/publication/rolfs.2024/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: January 4, 2024 --><html lang="en-us" >
+<!-- Last Published: January 7, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -783,7 +783,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/https://www.biorxiv.org/content/10.1101/2023.07.17.549281v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/https://doi.org/10.1101/2023.07.17.549281" target="_blank" rel="noopener">
   DOI
 </a>
 
