--- a/publication/kalogeropoulou.pbr.2017/index.html
+++ b/publication/kalogeropoulou.pbr.2017/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: January 8, 2024 --><html lang="en-us" >
+<!-- Last Published: January 9, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -834,7 +834,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Psychonomic Bulletin &amp; Review</em>, (24), 453&ndash;458</div>
+          <div class="col-12 col-md-9"><em>Psychonomic Bulletin &amp; Review</em>, 24, 453&ndash;458</div>
         </div>
       </div>
       <div class="col-md-1"></div>
