--- a/publication/ohl.jeplmc.2017/index.html
+++ b/publication/ohl.jeplmc.2017/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: January 8, 2024 --><html lang="en-us" >
+<!-- Last Published: January 9, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -832,7 +832,7 @@
       <div class="col-md-10">
         <div class="row">
           <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-          <div class="col-12 col-md-9"><em>Journal of Experimental Psychology: Learning, Memory, and Cognition</em>, (43), 5, 736&ndash;748</div>
+          <div class="col-12 col-md-9"><em>Journal of Experimental Psychology: Learning, Memory, and Cognition</em>, 43, 5, 736&ndash;748</div>
         </div>
       </div>
       <div class="col-md-1"></div>
