--- a/contact/index.html
+++ b/contact/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: April 12, 2024 --><html lang="en-us" >
+<!-- Last Published: April 24, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -745,7 +745,7 @@ Germany</p>
     
     <li>
       <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-      <span id="person-email"><a href="mailto:mindinactionlab@gmail.com">mindinactionlab@gmail.com</a></span>
+      <span id="person-email"><a href="mailto:sven.ohl%20[at]%20hu-berlin.de">sven.ohl [at] hu-berlin.de</a></span>
     </li>
     
 
