--- a/publication/index.html
+++ b/publication/index.html
@@ -816,6 +816,14 @@
 
 
   
+    
+  
+
+
+
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="/files/Klanke.biorxiv.2024.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -831,9 +839,7 @@
 
 
 
-
-
-<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/https://www.biorxiv.org/content/10.1101/2024.07.02.601661v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header btn-sm" href="https://doi.org/https://doi.org/10.1101/2024.07.02.601661" target="_blank" rel="noopener">
   DOI
 </a>
 
