--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
     
     <a href="/post/24-07-03-preprintjan/" >
       <div class="img-hover-zoom">
-        <img src="/post/24-07-03-preprintjan/featured_hu32edd3654c3bb3628dfc185a46ce7e3c_1119030_808x455_fill_q75_h2_lanczos_top.webp" height="455" width="808"
+        <img src="/post/24-07-03-preprintjan/featured_huf2df34a37e32489c074d4c85eacba7e8_81285_808x455_fill_q75_h2_lanczos_top_3.webp" height="455" width="808"
             class="article-banner" alt="New preprint on sensorimotor awareness." loading="lazy">
       </div>
     </a>
@@ -1098,7 +1098,7 @@
   
   <a href="/post/24-07-03-preprintjan/"  class="summary-link">
     <div class="article-style">
-      <p><p>To do.</p></p>
+      <p><p>I am so incredibly happy that this preprint on sensorimotor awareness with Jan Klanke as first author is available on biorxiv. Jan has created a wonderful new paradigm to measure microsaccade sensitivity. There are so many exciting methodological finesses in the study that together highlight the role of intention in sensorimotor awareness. See more here <a href="https://doi.org/10.1101/2024.07.02.601661" target="_blank" rel="noopener">https://doi.org/10.1101/2024.07.02.601661</a></p></p>
     </div>
   </a>
   
