--- a/publication/klanke.2024/index.html
+++ b/publication/klanke.2024/index.html
@@ -764,6 +764,14 @@
 
 
   
+    
+  
+
+
+
+<a class="btn btn-outline-primary btn-page-header" href="/files/Klanke.biorxiv.2024.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
@@ -779,9 +787,7 @@
 
 
 
-
-
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/https://www.biorxiv.org/content/10.1101/2024.07.02.601661v1" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/https://doi.org/10.1101/2024.07.02.601661" target="_blank" rel="noopener">
   DOI
 </a>
 
