--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: August 13, 2024 --><html lang="en-us" >
+<!-- Last Published: August 16, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -903,6 +903,105 @@
 
 
 
+<section id="section-markdown" class="home-section wg-markdown  "  >
+ <div class="home-section-bg " >
+   
+ </div>
+  <div class="container">
+
+  
+    <div class="row  justify-content-center">
+    
+  
+
+    
+
+
+
+
+
+
+
+
+
+
+  <div class="col-12">
+    <p>If you don&rsquo;t know why you ended up on this website, then try out the visual turntable and have some fun setting things in motion.</p>
+<ul class="cta-group">
+  <li>
+    <a href="./turntable/"  class="btn btn-primary px-3 py-3">Visual Turntable →</a>
+  </li>
+</ul>
+
+  </div>
+
+
+
+  
+    </div>
+  
+
+  </div>
+</section>
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <section id="section-collection" class="home-section wg-collection  "  >
  <div class="home-section-bg " >
    
@@ -1525,7 +1624,7 @@
   <div class="col-12">
     <ul class="cta-group">
   <li>
-    <a href="./people/"  class="btn btn-primary px-3 py-3">Meet the team →</a>
+    <a href="./turntable/"  class="btn btn-primary px-3 py-3">Try out the visual turntable →</a>
   </li>
 </ul>
 
