--- a/index.html
+++ b/index.html
@@ -1138,19 +1138,19 @@
     <a href="/post/24-09-15-september/" >
       <div class="img-hover-zoom">
         <img src="/post/24-09-15-september/featured_hu5ca0d4bebe998e7a884248c454ab8d14_333322_808x455_fill_q75_h2_lanczos_top.webp" height="455" width="808"
-            class="article-banner" alt="Welcome to the lab Laura" loading="lazy">
+            class="article-banner" alt="September outlook" loading="lazy">
       </div>
     </a>
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/post/24-09-15-september/" >Welcome to the lab Laura</a>
+    <a href="/post/24-09-15-september/" >September outlook</a>
   </div>
 
   
   <a href="/post/24-09-15-september/"  class="summary-link">
     <div class="article-style">
-      <p><p>If you divide the lab year roughly into presenting science vs. creating science, then September is the month when we all come back to our labs and get busy tinkering, implementing and piloting new ideas. We&rsquo;ve spent the last few weeks doing just that and are still getting new input through our regular Reading Club, which everyone actively attends.</p></p>
+      <p><p>If you divide the lab year roughly into presenting science vs. creating science, then September is the month when we all come back to our labs and get busy tinkering, implementing and piloting new ideas. We&rsquo;ve spent the last few weeks doing just that and are still getting new input through our regular Reading Club, which everyone actively attends. Our team is now almost complete for the next few months (but wait for the next post) and I am happy to have such a wonderful team that is highly motivated to do good science.</p></p>
     </div>
   </a>
   
