--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
     
     <a href="/post/25-05-08-natcomm/" >
       <div class="img-hover-zoom">
-        <img src="/post/25-05-08-natcomm/featured_huc37fc1b6e3f0df279fe4382c2ac558fa_189250_808x455_fill_q75_h2_lanczos_top.webp" height="455" width="808"
+        <img src="/post/25-05-08-natcomm/featured_hu725a332fab08a68855f57cefbbad79b8_223575_808x455_fill_q75_h2_lanczos_top.webp" height="455" width="808"
             class="article-banner" alt="New paper and press release" loading="lazy">
       </div>
     </a>
@@ -1150,7 +1150,7 @@
   
   <a href="/post/25-05-08-natcomm/"  class="summary-link">
     <div class="article-style">
-      <p><p>This paper on the visibility of saccade-like motion has been long in the making and is finally out. In a tour de force this paper shows that the perceptual thresholds for high-speed motion perception during fixation can be predicted based on the lawful kinematics of saccadic eye movements. Check out the paper just published in Nature Communications LINK and the press release LINK.</p></p>
+      <p><p>This paper on the visibility of saccade-like motion has been long in the making and is finally out. In a tour de force this paper shows that the perceptual thresholds for high-speed motion perception during fixation can be predicted based on the lawful kinematics of saccadic eye movements. Check out the paper just published in Nature Communications <a href="https://www.nature.com/articles/s41467-025-58659-9" target="_blank" rel="noopener">https://www.nature.com/articles/s41467-025-58659-9</a> and the press release <a href="https://www.scienceofintelligence.de/too-fast-to-see-eye-movements-predict-speed-limits-in-perception/" target="_blank" rel="noopener">https://www.scienceofintelligence.de/too-fast-to-see-eye-movements-predict-speed-limits-in-perception/</a>.</p></p>
     </div>
   </a>
   
