--- a/index.html
+++ b/index.html
@@ -1138,13 +1138,13 @@
     <a href="/post/25-05-08-natcomm/" >
       <div class="img-hover-zoom">
         <img src="/post/25-05-08-natcomm/featured_hu725a332fab08a68855f57cefbbad79b8_223575_808x455_fill_q75_h2_lanczos_top.webp" height="455" width="808"
-            class="article-banner" alt="New paper and press release" loading="lazy">
+            class="article-banner" alt="New paper in Nature Communications and press release" loading="lazy">
       </div>
     </a>
   
 
   <div class="section-subheading article-title mb-1 mt-3">
-    <a href="/post/25-05-08-natcomm/" >New paper and press release</a>
+    <a href="/post/25-05-08-natcomm/" >New paper in Nature Communications and press release</a>
   </div>
 
   
