--- a/index.html
+++ b/index.html
@@ -1153,7 +1153,8 @@
     <div class="article-style">
       <p><p>Since the current semester, we have been lucky to welcome multiple new students to the lab.
 Laura Ackermann and Maria Fischer are conducting causality experiments in the lab as part of their bachelor theses in Psychology. Lara Ramp is working on microsaccades in her bachelor thesis. Gamze Kahyaoglu and Tessa Chambon are interns from The Netherlands enrolled in the Neuroscience and Cognition master programme. Gamze is doing a research project on corrective saccades, and Tessa is doing a literature assignment as well as an EEG project.
-Welcome to the lab all, we’re happy to have you!</p></p>
+Welcome to the lab all, we’re happy to have you!
+[authored by LvZ]</p></p>
     </div>
   </a>
   
